# hsds-client-rs

./: .gitignore  Cargo.toml  README.md  hsds_openapi.yaml
examples/: domain_integration_test.rs  groups_integration_test.rs  h5_file_loader.rs
src/: auth.rs  client.rs  error.rs  lib.rs  models.rs
src/apis/: attribute.rs  dataset.rs  datatype.rs  domain.rs  group.rs  link.rs  mod.rs
tests/: attributes_integration_test.rs  dataset_integration_test.rs  datatype_integration_test.rs  domains_integration_test.rs  groups_integration_test.rs  links_integration_test.rs
