[package]
name = "hsds_client"
version = "0.1.0"
edition = "2021"

[features]
default = []
ffi = []  # Feature flag for FFI/LabVIEW integration

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core HTTP client dependencies
reqwest = { version = "0.12.20", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI/JSON schema support
utoipa = { version = "5.2", features = ["chrono", "uuid"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# URL building and HTTP handling
url = "2.5"
base64 = "0.22"

# Error handling
thiserror = "2.0"
log = "0.4"
anyhow = "1.0"

# FFI support (for LabVIEW integration)
libc = "0.2.173"

# Async utilities
futures-util = "0.3.31"
async-trait = "0.1.88"

# URL encoding
urlencoding = "2.1"
bytes = "1.5"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"
wiremock = "0.6"
